# piano_worker

./: .gitignore  Dockerfile  deploy_piano_worker.ps1  deploy_piano_worker.sh  pyproject.toml
worker/: piano_tasks.py  run.py
worker/email_templates/: piano_beautify_client_email.html  piano_beautify_email-fr.html  piano_beautify_email.html
