[tool.poetry]
name = "piano-worker"
version = "0.1.0"
description = "Celery worker for piano image beautifying using i2i LLM"
authors = ["Gabriel de Fombelle <gabriel.de.fombelle@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "worker" }]   # code dans workers/piano_worker/worker

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

# Celery stack
celery = "^5.4.0"
# redis = "^5.0.7"         # décommente si tu utilises Redis comme backend / cache
# pika = "^1.3.2"          # garde uniquement si tu publies AMQP en direct hors Celery

# I/O & utils
httpx = "^0.27.2"
pydantic = "^2.8.0"

# Images (i2i)
pillow = "^11.2.1"
pillow-heif = "^1.0.0"      # pour HEIC/HEIF si présent

# Storage / objets
minio = "^7.2.15"

# internes (DEV, editable)
simple-logger = { path = "../../packages/simple_logger", develop = true }
pytune-helpers-messaging = { path = "../../packages/pytune_helpers_messaging", develop = true }
pytune-configuration = { path = "../../packages/pytune_configuration", develop = true }
pytune-llm = { path = "../../packages/pytune_llm", develop = true }
pytune-data =  { path = "../../packages/pytune_data", develop = true }
pytune-piano-i2i = { path = "../../packages/pytune_piano_i2i", develop = true }

# PROD (quand tu publieras)
# simple-logger = "^2.0.1"
# pytune-helpers = "^1.2.0"
# pytune-configuration = "^2.0.3"
# pytune-llm = "^0.1.0"
# pytune-piano-i2i = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.6.8"
mypy = "^1.11.1"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
piano-worker = "worker.piano_tasks:main"

