[project]
name = "piano_worker"
version = "0.0.0"
description = "PyTune worker for piano tasks"
requires-python = ">=3.12,<3.13"

[tool.poetry]
name = "piano_worker"
version = "0.1.0"
description = "Celery worker for piano image beautifying using i2i LLM"
authors = ["Gabriel de Fombelle <gabriel.de.fombelle@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "worker" }]   # code dans workers/piano_worker/worker

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

# Celery stack
celery = "^5.4.0"
# redis = "^5.0.7"         # décommente si tu utilises Redis comme backend / cache
# pika = "^1.3.2"          # garde uniquement si tu publies AMQP en direct hors Celery

# I/O & utils
httpx = "^0.27.2"
pydantic = "^2.8.0"

# Images (i2i)
pillow = "^11.2.1"
pillow-heif = "^1.0.0"      # pour HEIC/HEIF si présent

# Storage / objets
minio = "^7.2.15"

# internes (DEV+PROD, editable)
pytune_configuration = { git = "https://github.com/gdefombelle/pytune_configuration.git", branch = "main"}
simple_logger = { git = "https://github.com/gdefombelle/simple_logger.git", branch = "main"}
pytune_data = { git  = "https://github.com/gdefombelle/pytune_data.git", branch = "main"}
pytune_helpers_messaging = { git = "https://github.com/gdefombelle/pytune_helpers_messaging.git", branch = "main" }
pytune_llm = { git = "https://github.com/gdefombelle/pytune_llm.git", branch = "main" }
pytune_piano_i2i = { git = "https://github.com/gdefombelle/pytune_piano_i2i.git", branch = "main" }


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.6.8"
mypy = "^1.11.1"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
piano-worker = "worker.piano_tasks:main"

