[project]
name = "piano_worker"
version = "0.1.0"
description = "Celery worker for piano image beautifying using i2i LLM"
requires-python = ">=3.12,<3.13"

dependencies = [
    "celery>=5.4.0",
    "httpx>=0.27.2",
    "pydantic>=2.8.0",

    "pillow>=11.2.1",
    "pillow-heif>=1.0.0",
    "jinja2>=3.1.4",

    "minio>=7.2.15",

    # Internal shared packages
    "pytune_configuration",
    "simple_logger",
    "pytune_data",
    "pytune_llm",
    "pytune_piano_i2i",
    "pytune_chat",
    "pytune_helpers_images"
]
